--- a/flipkart/App.css
+++ b/flipkart/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
 .main{
   height: 100vh;
   width: 100%;
@@ -15,4 +16,37 @@
 }
 .item:hover{
   transform: scale(1.05);
+}
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 7vh;
+  background-color: #047BD5;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.n1,.n2{
+  margin: 1%;
+  color: black;
+}
+.n2 .search{
+  height: 3vh;
+  width: 550px;
+  border: none;
+  text-align: center;
+}
+.n3{
+  display: flex;
+}
+.n3 img{
+  margin-left: 2%;
+}
+.n4{
+  display: flex;
+}
+.n1 h1{ 
+    font-family: "Notable", sans-serif;
+    font-weight: 400;
+    font-style: bold;
 }
